--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header{
 	padding: 35px;
 	text-align: center;
 	border-bottom: 5px solid #2e2e2e41;
+	font-size: 30px;
 }
 /*Grid de produtos*/
 .container{
@@ -27,6 +28,41 @@ footer{
 .card{
 	width: 31%;
 	display: inline-block;
+	margin: 1% 1%;
+	padding: 80px;
 	
 }
+
+h3{
+	margin-bottom: 10px;
+	color: #000000;
+	border-left: 5px solid #7c7b7b;
+	padding-left: 7px;
+	font-size: 24px;
+}
+
+#img-1{
+	background-image: url('tenis1.jpg');
+}
+
+#img-2{
+	background-image: url();
+}
+
+#img-3{
+	background-image: url();
+}
+
+#img-4{
+	background-image: url();
+}
+
+#img-5{
+	background-image: url();
+}
+
+#img-6{
+	background-image: url();
+}
+
 
